package it.dosti.justit.model.booking.repairReport;

public interface RepairReport {

    String getTechNotes();

}
